// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textLineThroughColor renders 0 1`] = `
Array [
  .c0 {
  text-line-through-color: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughColor renders function 1`] = `
Array [
  .c0 {
  text-line-through-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughColor renders invalid theme path 1`] = `
Array [
  .c0 {
  text-line-through-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughColor renders negative number 1`] = `
Array [
  .c0 {
  text-line-through-color: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughColor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-line-through-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-line-through-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-line-through-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-line-through-color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughColor renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-line-through-color: July;
  }
}

@media April {
  .c0 {
    text-line-through-color: August;
  }
}

@media January {
  .c0 {
    text-line-through-color: September;
  }
}

@media April {
  .c0 {
    text-line-through-color: November;
  }
}

@media June {
  .c0 {
    text-line-through-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-line-through-color: July;
  }
}

@media April {
  .c0 {
    text-line-through-color: August;
  }
}

@media January {
  .c0 {
    text-line-through-color: September;
  }
}

@media April {
  .c0 {
    text-line-through-color: November;
  }
}

@media June {
  .c0 {
    text-line-through-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-line-through-color: January;
  }
}

@media April {
  .c0 {
    text-line-through-color: December;
  }
}

@media January {
  .c0 {
    text-line-through-color: April;
  }
}

@media April {
  .c0 {
    text-line-through-color: May;
  }
}

@media June {
  .c0 {
    text-line-through-color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-line-through-color: January;
  }
}

@media April {
  .c0 {
    text-line-through-color: December;
  }
}

@media January {
  .c0 {
    text-line-through-color: April;
  }
}

@media April {
  .c0 {
    text-line-through-color: May;
  }
}

@media June {
  .c0 {
    text-line-through-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughColor renders postitive number 1`] = `
Array [
  .c0 {
  text-line-through-color: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughColor renders string 1`] = `
Array [
  .c0 {
  text-line-through-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textLineThroughColor renders valid theme path 1`] = `
Array [
  .c0 {
  text-line-through-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-line-through-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
